# pubs

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  docs.md  lab.yaml  labpubs.yaml  notify.py  pyproject.toml
.github/ISSUE_TEMPLATE/: add-researcher.yml
.github/workflows/: add-researcher.yml  bootstrap-labels.yml  sync-pubs.yml
patches/: dedup.py
scripts/: add_researcher.py  link_scholar_works.py
src/pubs_api/: app.py  dependencies.py
src/pubs_api/routers/: exports.py  researchers.py  stats.py  works.py
tests/: conftest.py  test_dedup_patch.py  test_exports.py  test_link_scholar_works.py  test_researchers.py  test_stats.py  test_works.py
